--- a/main.html
+++ b/main.html
@@ -4,10 +4,17 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	    <title>Styled HTML Block</title>
+
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	    <div class="main">
+        <h1 class="heading" id="heading">This is a Heading</h1>
+    </div>
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
